--- a/readanchor.html
+++ b/readanchor.html
@@ -2,6 +2,7 @@
 <!--source: http://aktuell.de.selfhtml.org/artikel/javascript/wertuebergabe/ -->
 <html>
 <head>
+<noscript>Bitte JavaScript aktivieren!</noscript>
 <script type="text/javascript">
 function Werteliste (anker) {
   if (anker == '') return;
